# cia

./: README.md  pyproject.toml
assets/tests/: config.toml
assets/tests/proj_a/: module_a.py  module_b.py  module_c.py  module_d.py
routines/: lint.sh  test.sh
src/cia/: __init__.py  models.py
src/tests/: test_apply_rule.py  test_detect_entities.py  test_parsing_import_statements.py  test_parsing_rules.py
