[project]
name = "cia"
version = "0.1.0"
description = "Code Import Analyzer"
authors = [{ name = "Ramon Moraes" }]
readme = "README.md"
requires-python = ">=3.13"

[tool.poetry]
packages = [{ include = "cia", from = "src" }]

[tool.poetry.scripts]
cia = "cia"

[tool.poetry.group.dev.dependencies]
isort = "^6.0.1"
black = "^25.1.0"
ruff = "^0.12.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80
